# django

./: README.md
django-polls/: setup.cfg
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
django-polls/polls/migrations/: 0001_initial.py
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/polls/: tests.py  views.py
mysite/polls/static/polls/: style.css
